# udisks-kitless

./: HACKING  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: 80-udisks2.rules  Makefile  Makefile.am  Makefile.in  org.freedesktop.UDisks.service.in  org.freedesktop.UDisks2.xml  udisks.pc
data/systemd/: udisks.service.in
doc/: Makefile  Makefile.am  Makefile.in  udisks2-sections.txt
doc/dbus/: Makefile  Makefile.in  org.freedesktop.UDisks.Adapter.ref.xml  org.freedesktop.UDisks.Device.ref.xml  org.freedesktop.UDisks.Expander.ref.xml  org.freedesktop.UDisks.Port.ref.xml  org.freedesktop.UDisks.ref.xml
doc/html/: Adapter.html  Port.html  (+102 more)
po/: Makefile  Makefile.in  POTFILES  ca.po  cs.po  da.po  de.po  en_GB.po  hu.po  id.po  it.po  kk.po  ko.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
policy/: Makefile  Makefile.in
src/: .daemon.c.swp  Makefile  Makefile.am  Makefile.in  adapter.c  daemon.c  daemon.h  device.c  main.c  marshal.c  marshal.h  mount-monitor.c  udisks-daemon-marshal.c  udisksdaemon.c  udisksdaemon.h  udisksdaemontypes.h  udisksdaemonutil.c  udisksdaemonutil.h  udiskslinuxblock.c  udiskslinuxdriveata.c  udiskslinuxencrypted.c  udiskslinuxfilesystem.c  udiskslinuxfsinfo.c  udiskslinuxmanager.c  udiskslinuxmdraid.c  udiskslinuxpartition.c  udiskslinuxpartitiontable.c  udiskslinuxprovider.c  udisksmountmonitor.c  udisksstate.c
tests/: Makefile  Makefile.in  run
tools/: Makefile  Makefile.in  udisks-marshal.c  udisks-marshal.h  udisksctl.c  umount-udisks.c
udisks/: Makefile.in
(+52 files in other folders)
